# gluamanager

./: .gitignore  README.md  README_RU.md  default_source.json
.github/workflows/: release.yml
exampleMeta/: mantle.json  newspawnmenu.json  thirdperson.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: postinstall.sh  postremove.sh
src-tauri/src/: cli.rs  error.rs  lib.rs  main.rs
src-tauri/src/addon/: manifest.rs  mod.rs  models.rs
src-tauri/src/api/: commands.rs  mod.rs
src-tauri/src/app/: mod.rs
src-tauri/src/github/: client.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/update/: mod.rs  service.rs
src-tauri/windows/: hooks.nsh
ui/: index.html  package-lock.json  package.json  styles.css  vite.config.js
ui/locales/: en.json  ru.json
ui/src/: App.vue  app.js  dom.js  i18n.js  main.js  render.js  router.js  state.js  utils.js
ui/src/assets/: main.css
ui/src/components/: AddonCard.vue  AddonMetadataModal.vue  AddonModal.vue  EmptyState.vue  ReadmeContent.vue  SourceList.vue
ui/src/composables/: useAppStore.js
ui/src/services/: messages.js  tauri.js
ui/src/utils/: format.js  markdown.js
ui/src/views/: AddonsView.vue  SettingsView.vue
ui/styles/: base.css  modal.css  shell.css
