[package]
name = "gluamanager"
version = "0.1.0"
edition = "2021"
description = "Desktop addon manager for Garry's Mod"

[lib]
name = "gluamanager"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
